--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@
 
 # dependencies
 #   - use `pdm add <package>` and `pdm remove <package>` to manage dependencies
+#   - use `pdm add -d -G dev <packag>` to add a dev dependency
 #   - use `pdm update --update-all` to update dependencies
 #   - use `pdm install` to install dependencies
 
@@ -27,13 +28,18 @@ requires-python = ">=3.10,<3.13"
 dependencies = [
     "adafruit-blinka~=8.46",
     "adafruit-board-toolkit~=1.1",
-    "feeph-i2c~=0.6",
+    "feeph-i2c~=0.7",
     "gpiod~=2.2",
 ]
 readme = "README.md"
 license = {text = "GPL-3.0-or-later"}
 repository = "https://github.com/feeph/libtca953x-python/"
 keywords = [
+    "gpio",
+    "i2c",
+    "smbus",
+    "tca9536",
+    "tca9537",
 ]
 classifiers = [
     "Development Status :: 3 - Alpha",
@@ -60,7 +66,7 @@ build-backend = "pdm.backend"
 profile           = "black"
 line_length       = 250
 multi_line_output = 7
-src_paths         = ["feeph", "tests"]
+src_paths         = ["feeph/", "tests/"]
 
 # https://pypi.org/project/autopep8/
 [tool.autopep8]
@@ -71,10 +77,16 @@ in-place = true
 [tool.pdm]
 distribution = true
 
-# automatically update requirements.txt on `pdm lock`
+# automatically update requirements.txt and requirements-dev.txt
+# on `pdm lock`
+
 [[tool.pdm.autoexport]]
 filename = "requirements.txt"
-groups = ["default", "test"]
+groups = ["default"]
+
+[[tool.pdm.autoexport]]
+filename = "requirements-dev.txt"
+groups = ["dev", "tools"]
 
 [tool.pdm.build]
 includes = ["feeph/"]
@@ -82,14 +94,16 @@ source-includes = ["tests/"]
 
 [tool.pdm.dev-dependencies]
 dev = [
+    "types-PyYAML~=6.0",
 ]
-test = [
-    "autopep8     ~= 2.2",
-    "flake8       ~= 7.0",
-    "mypy         ~= 1.10",
-    "pytest-cov   ~= 5.0",
-    "pytest-sugar ~= 1.0",
-    "types-PyYAML>=6.0.12.20240311",
+tools = [
+    "autopep8~=2.2",
+    "copier~=9.3",
+    "flake8~=7.0",
+    "mypy~=1.10",
+    "pylint~=3.2",
+    "pytest-cov~=5.0",
+    "pytest-sugar~=1.0",
 ]
 
 # during development: fetch all packages in our namespace from TestPyPI
@@ -100,3 +114,8 @@ test = [
 name = "testpypi"
 url = "https://test.pypi.org/simple/"
 include_packages = ["feeph-*"]
+
+[tool.pylint."MESSAGES CONTROL"]
+fail-under = 8
+max-line-length = 250
+disable = "no-else-return,use-list-literal"
