--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -6,7 +6,7 @@
 # repository and assigned a permission level first. Otherwise they will
 # be underlined with red squiggly lines when looking at the file in the
 # WebGUI and it won't work.
-#  -> https://github.com/feeph/libtca953x-python/settings/access
+# (GitHub -> Repository -> Settings -> Collaborators)
 #
 
 # define default ownership
