--- a/tox.ini
+++ b/tox.ini
@@ -50,15 +50,20 @@ extend-ignore   = E221,E241
 
 [testenv:lint]
 description = lint code (flake8)
-deps = --global-option="$(python-config --includes)" -r requirements.txt
-commands = flake8 {posargs:feeph tests}
+deps =
+    --global-option="$(python-config --includes)" -r requirements.txt
+    --global-option="$(python-config --includes)" -r requirements-dev.txt
+commands =
+    flake8 {posargs:feeph examples/ tests/}
 
 [testenv:type]
 description = check type hints
-deps = --global-option="$(python-config --includes)" -r requirements.txt
+deps =
+    --global-option="$(python-config --includes)" -r requirements.txt
+    --global-option="$(python-config --includes)" -r requirements-dev.txt
 commands =
     mypy -p feeph.tca953x
-    mypy {posargs:scripts tests}
+    mypy {posargs:examples/ tests/}
 
 ; code is incompatible with Python 3.9 due to type hints
 ; (it could be fixed by changing the type hints but we won't)
@@ -70,19 +75,23 @@ depends =
     coverage_report: py310,py311,312
 set_env =
   VIRTUALENV_DISCOVERY = pyenv
-deps = --global-option="$(python-config --includes)" -r requirements.txt
+deps =
+    --global-option="$(python-config --includes)" -r requirements.txt
+    --global-option="$(python-config --includes)" -r requirements-dev.txt
 # generate a coverage report but do not mesurements and do not fail
 # (we will combine all measurements into a single report later on)
-commands = pytest --cov --cov-append --cov-report= --cov-fail-under=0 tests {posargs}
+commands =
+    pytest --cov=feeph.tca953x --cov-append --cov-report= --cov-fail-under=0 {posargs: tests/}
 
 [testenv:coverage_clean]
 deps = coverage
 skip_install = true
-commands = coverage erase
+commands =
+    coverage erase
 
 [testenv:coverage_report]
 deps = coverage
 skip_install = true
 commands =
-    coverage report
+    coverage report --show-missing
     coverage html
